# dj-agora-mvp

./: .dockerignore  .env.dist  .gitignore  .kilocode  AGENT.md  AGENTS.md  Justfile  README.md  docker-compose.yml  lefthook.yml  manage.py  pyproject.toml
.cursor/commands/: cleanup.md  execute_plan.md  plan.md  tasks_prioritise.md
.cursor/rules/: api-webhooks.mdc  architecture.mdc  authentication-identities.mdc  baby-steps.mdc  clean-code.mdc  code-quality.mdc  conventional-commit.mdc  django-general.mdc  django-models.mdc  django-templates.mdc  django.mdc  format-python-files.mdc  forms.mdc  html.mdc  memory-bank.mdc  model-admin.mdc  project-commands.mdc  project-setup.mdc  project-specifics.mdc  python-testing.mdc  python.mdc  security.mdc  task-management.mdc  workflow.mdc
.github/workflows/: docker-build.yml
.ipython/profile_default/startup/: 00-autoreload.py
agora/: asgi.py  auth.py  colorthief.py  constants.py  context_processors.py  keycloak.py  keycloak_admin.py  middleware.py  selectors.py  settings.py  urls.py  validators.py  wsgi.py
agora/apps/core/: admin.py  api_v1.py  apps.py  forms.py  managers.py  models.py  selectors.py  services.py  tests.py  views.py  webhooks_v1.py
agora/templates/: 400.html  403.html  404.html  429.html  500.html  base.html  dashboard.html  error_base.html  index.html  profile.html  signup.html  support.html
agora/templates/flatpages/: default.html
agora/templates/includes/: faq.html  footer.html  header.html  hero_signed_up.html  hero_signup.html  profile_form.html
ansible/: deploy.yml  inventory.yml  requirements.yml
config/caddy/: Caddyfile  dj-agora-mvp.Caddyfile  keycloak.Caddyfile
config/gunicorn/: gunicorn.conf.py
config/systemctl/: gunicorn_mvp.service  gunicorn_mvp.socket
docker/app/: Dockerfile
docker/keycloak/: Containerfile
flatpages/: articles-of-association.html  imprint.html  privacy-policy.html
scripts/postgres-init/: 01-create-databases.sh
(+37 files in other folders)
