[project]
name = "dj-agora-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "django>=5.2.6",
    "django-debug-toolbar>=6.0.0",
    "django-environ>=0.12.0",
    "django-structlog>=9.1.1",
    "django-vite>=3.1.0",
    "gunicorn>=23.0.0",
    "nh3>=0.3.0",
    "requests>=2.32.5",
    "typeid-python>=0.3.2",
    "whitenoise[brotli]>=6.10.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "lefthook>=1.12.3",
    "pymarkdown>=0.1.4",
    "ruff>=0.12.11",
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Disable conflicting linting/formatting checks
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
# Don't use them all but disable them just in case that changes
ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.djlint]
profile = "django"
ignore = "H030,H031,H021"
preserve_leading_space = false
extension = "html"
preserve_blank_lines = true
use_gitignore = true
custom_html = ""
custom_blocks = "comment,endcomment"
